FEB 23 2021
	XP counter now works on Uranium
	Improved Uranium banking performance
	GnomeFlaxx0r -- picks flax, optionally strings, in Gnome Stronghold
	TaverlyBuyer script added -- buys vials and newts
	VialFiller script added -- fills vials in Falador
	Monkz -- basic script that kills monks in the lower level of the monastery. supports bone burying and prayer, with recharging at altar. 
	Updated Searos' SpinStrings to work on Uranium
	Updated PowerFletcha to use better tree id for normal trees
	Searos' ArrowMaker now supports headless arrows
	
FEB 20 2021
	AIOSmelter no longer tries to use "perfect gold bar" instead of "gold bar" for crafting jewelry
	AIOMagic now has quicker wait times, leading to increased casts per hr. 
	Controller.openBank() will now immediately return within ~10ms of the bank opening, leading to MUCH faster banking times for scripts that use it.


FEB 19 2021
	AIOSmelter now supports silver, gold, and gem furnace crafting items
	AIOSmelter now supports command line arguments
	Updated README.md to include OpenRSC Discord and IdleRSC donation link 
	Added castSpellOnSelf to IdleRSC and SBot
	Added AlchWheat for high/low alchemy training
	AIOMagic -- handles magic bank spells (alching, enchanting, superheat) and teleporting.

FEB 18 2021
	You no longer have to create the Cache folder. Upon starting the bot for the first time, you can select Uranium or Coleslaw via a popup GUI.  
	Screenshots are now output as PNG, not BMP.
	Screenshots are now saved to the "Screenshots/" folder.
	
	AIOSmelter's goldsmithing gauntlets bug fixed.
	AIOFighter now no longer freezes the whole client when unable to mage monsters. 
	AIOFighter now will no longer logout if you equip arrows on Coleslaw.
	AIOThiever will now walk outside after banking, instead of waiting for an NPC to become visible.
	HerbHarvester and LimpySnapez should not get stuck on the Taverly gate if someone else walks through it. 
	AIOCooker now has paint.
	