@@ -1,3 +1,6 @@
+	Hits, prayer, fatigue now displayed on Uranium
+	Fixed isAuthentic() returning true on Uranium for some reason.
+
 FEB 23 2021
 	XP counter now works on Uranium
 	Improved Uranium banking performance
